Fix styling for project flex wrap

--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -1,12 +1,13 @@
 #portfolio {
   margin-left: $sectionLeftMargin;
+  margin-right: 15px;
 }
 
 .portfolio-belt {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 
   .portfolio-thumb {
     max-width: 45%;
